# neXtaw-snapshots

./: AUTHORS  ChangeLog  INSTALL  Imakefile  Makefile.in  README  TODO  VERSION  acinclude.m4  aclocal.m4  config_h.in  configure  configure.in  mkinstalldirs
X11/: Makefile.in
X11/neXtaw/: AllWidgets.c  AsciiSink.c  AsciiSink.h  AsciiSinkP.h  AsciiSrc.c  AsciiSrc.h  AsciiSrcP.h  AsciiText.c  AsciiText.h  AsciiTextP.h  Box.c  Box.h  BoxP.h  Clock.c  Clock.h  ClockP.h  Command.c  Command.h  CommandP.h  Dialog.c  Dialog.h  DialogP.h  Form.c  Form.h  FormP.h  Grip.c  Grip.h  GripP.h  Label.c  Label.h  LabelP.h  Layout.c  Layout.h  LayoutP.h  List.c  List.h  ListP.h  Makefile.am  Makefile.in  MenuButtoP.h  (+85 more)
doc/: CHANGES  FAQ  Makefile.in  README.XAW3D  TODO
doc/app-dafaults/: 00-README  Editres  XFontSel  XPaint  XTerm
doc/app-defaults/: 00-README  Makefile.in  XPaint
lib/: AsciiSink.c  AsciiSink.h  AsciiSinkP.h  AsciiSrc.h  Box.c  Clock.c  ClockP.h  Command.c  Command.h  CommandP.h  Dialog.h  Form.c  Grip.h  GripP.h  Imakefile  LabelP.h  Layout.c  List.c  MenuButton.c  Misc.c  MultiSink.c  MultiSrc.c  Paned.c  Panner.c  Porthole.c  Repeater.c  Scrollbar.c  Scrollbar.h  ScrollbarP.h  SimpleMenu.c  SimpleP.h  SmeBSB.c  SmeThreeD.c  Text.c  TextP.h  TextPop.c  TextSrc.c  ThreeD.c  ThreeDP.h  Toggle.c  (+2 more)
package/: neXtaw.map  neXtaw.spec  neXtaw.sym
package/debian/: changelog  control  copyright  nextaw.lintian-overrides  rules  watch
programs/: Imakefile  Makefile.in
programs/neXtclock/: Imakefile  Makefile.am  Makefile.in  NeXtClock.ad  neXtclock.1x.html  neXtclock.c  neXtclock.man
